logout register authorization